--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "15.1.6",
     "react": "19.0.0",
     "react-awesome-reveal": "^4.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
